                         CHANGES version 2.10.6

              This file summarizes changes made since 1.0

Version 2.10.6
--------------
* New: ConnectionPool_start() now throws an SQLException instead
  of calling ABORT if starting the pool failed. Thanks to Christopher
  O'Hara for suggestion.

Version 2.10.5
--------------
* New: Automatically unescape the following URL components:
  credentials, path and parameter values.

Version 2.10.4
--------------
* MySQL: Improved error reporting for select and prepared statements

Version 2.10.3
--------------
Bug fixes: Oracle: fixed a compile issue for GCC when strict
C99 is used. Thanks to Stas Oginsky.

Version 2.10.2
--------------
Bug fixes: Oracle: fixed a parameter sequence bug at
connection. Bug was introduced in 2.9. Thanks to l00106600.

Version 2.10.1
--------------
* A zdb.pc library package config file was added. Thanks to 
  Matthieu Verbert
* Build, configure and minor code improvements

Version 2.10
-----------
* Libzdb is now compatible with and can be included in C++ or 
  Objective-C(++) projects.
* Internal optimizing changes and improvements

Version 2.9
-----------
* SQLite: Unescape path to allow for (white-)space in database file
  path. Thanks to Jonas Schnelli
* SQLite: Use sqlite3_open_v2 instead of sqlite3_enable_shared_cache 
  which is deprecated in OS X Lion. 
* Oracle: Fixed a problem with ResultSet not returning all data
              
Version 2.8.1
-------------
* Oracle: Fixed a transaction related memory leak
              
Version 2.8
-----------
* Allow spaces in URL property values
* PostgreSQL: Allow sending application name to the server for 
  logging. Thanks to Chris Mayo. See the PostgreSQL URL property,
  application-name.
Bug fixes:
* ResultSet_getBlob: Ensure that returned blob size is 0 if blob
  is SQL null.
* Oracle: Fixed ResultSet memory leak.

Version 2.7
-----------
* Added tentative support for Oracle. Thanks to Volodymyr